# office2pdf

./: CLAUDE.md
.github/workflows/: ci.yml  release.yml
crates/office2pdf/: Cargo.toml
crates/office2pdf-cli/: Cargo.toml
crates/office2pdf/examples/: custom_options.rs  simple_convert.rs
crates/office2pdf/src/: lib_conversion_tests.rs  lib_pipeline_tests.rs
crates/office2pdf/src/ir/: elements.rs
crates/office2pdf/src/parser/: docx.rs  docx_context_shape.rs  docx_context_shape_tests.rs  docx_contexts.rs  docx_lists.rs  docx_sections.rs  docx_styles.rs  docx_tables.rs  docx_tests.rs  docx_text.rs  pptx_table_style_tests.rs  pptx_tables.rs  smartart.rs  xlsx_cells.rs  xlsx_style.rs  xlsx_tests.rs
crates/office2pdf/src/render/: font_context_tests.rs  font_subst.rs  font_subst_tests.rs  pdf_tests.rs  typst_gen.rs  typst_gen_paragraph_tests.rs  typst_gen_table_border_tests.rs  typst_gen_table_codegen_tests.rs  typst_gen_tables.rs  typst_gen_text.rs  typst_gen_visual_tests.rs
crates/office2pdf/tests/: artifact_generator.rs  bulk_conversion.rs  docx_fixtures.rs  pdf_validation.rs  perf_validation.rs  pptx_fixtures.rs  xlsx_fixtures.rs
tests/fixtures/: THIRD-PARTY-LICENSES.md
tests/fixtures/docx/: issue_176_office2pdf_test.docx
